--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "libphonenumber-js": "^1.11.11",
     "next": "14.2.15",
     "nodemailer": "^6.9.15",
     "react": "^18",
